--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,6 +7,8 @@
         <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
         <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 
         <!--load css-->
@@ -19,25 +21,37 @@
 
     <body class="body-class" ng-controller="mainCtrl" ng-init="init()">
     <div>
-        <div class="wrapper" style="min-height: 250px;">
+        <div class="wrapper" style="min-height: 300px;">
             <br>
             <br>
             <div>
-                <h1>MY CINEMA</h1>
+                <h1 style="padding-left:30px;">MY CINEMA <svg xmlns="http://www.w3.org/2000/svg"
+                                                              width="38" height="38" fill="currentColor"
+                                                              class="bi bi-film" viewBox="0 0 16 16">
+                    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8
+                    8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zM1 7v2h2V7H1zm2 3H1v2h2v-2zm-2 3v2h2v-2H1zM15 1h-2v2h2V1zm-2
+                    3v2h2V4h-2zm2 3h-2v2h2V7zm-2 3v2h2v-2h-2zm2 3h-2v2h2v-2z"/>
+                </svg></h1>
+
+                <div class="search" style="padding-left:41px;">
+                <span class="fa fa-search" style="font-size: 22px;"></span>
                 <input class="inputtext" type="text" ng-model="enteredText" ng-keyup="filterItems()"/>
-                <div class="choices" ng-show="isVisible.suggestions" style="max-height:129px; overflow-y:scroll;">
+                </div>
+
+
+                <div class="choices" ng-show="isVisible.suggestions" style="margin-left:65px; max-height:129px; max-width: 270px; overflow-y:scroll;">
                     <div class="choice" ng-repeat="choice in filteredChoices"
                          ng-click="redirectToMovie(choice)">{{choice.label}}</div>
                 </div>
             </div>
         </div>
 
-        <div style="padding:20px;" ng-if="enteredText">
+        <div style="padding-left:20px; padding-right:20px;" ng-if="enteredText">
             <h2>Search Results for "{{enteredText}}"</h2>
             <hr class="rounded" style="height:1px;border:none;color:#333;background-color:#333;">
         </div>
 
-        <div style="padding:20px;" ng-if="!enteredText">
+        <div style="padding-left:20px; padding-right:20px;" ng-if="!enteredText">
             <h2>Your Wishlist ...</h2>
             <hr class="rounded" style="height:1px;border:none;color:#333;background-color:#333;">
         </div>
