--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,8 +2,8 @@
 
 <html ng-app="ohadApp">
     <head>
+        <!--load resources-->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-
         <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
         <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -17,26 +17,23 @@
         <script src="js/main-ctrl.js"></script>
         <script src="js/movie-modal-ctrl.js"></script>
         <script src="js/u-api.js"></script>
+        <script src="js/cinema-icon-directive.js"></script>
     </head>
 
     <body class="body-class" ng-controller="mainCtrl" ng-init="init()">
-    <div>
-        <div class="wrapper">
-            <br>
-            <br>
+        <div>
+         <div class="wrapper">
+             <br>
+             <br>
                 <h1 class="cinema-title">MY CINEMA
-                 <svg xmlns="http://www.w3.org/2000/svg"
-                          width="38" height="38" fill="currentColor"
-                          class="bi bi-film" viewBox="0 0 16 16">
-                    <path d="M0 1a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm4 0v6h8V1H4zm8
-                    8H4v6h8V9zM1 1v2h2V1H1zm2 3H1v2h2V4zM1 7v2h2V7H1zm2 3H1v2h2v-2zm-2 3v2h2v-2H1zM15 1h-2v2h2V1zm-2
-                    3v2h2V4h-2zm2 3h-2v2h2V7zm-2 3v2h2v-2h-2zm2 3h-2v2h2v-2z"/>
-                 </svg>
+                 <cinema-icon-directive>
+
+                 </cinema-icon-directive>
                 </h1>
 
                 <div class="search search-wrapper">
                     <span class="fa fa-search"></span>
-                    <input class="inputtext" type="text" ng-model="enteredText" ng-keyup="getMovies()"/>
+                    <input class="input-text" type="text" ng-model="enteredText" ng-keyup="getMovies()"/>
                 </div>
 
 
@@ -44,7 +41,7 @@
                     <div class="choice" ng-repeat="choice in filteredChoices"
                          ng-click="redirectToMovie(choice)">{{choice.label}}</div>
                 </div>
-            </div>
+           </div>
 
             <div class="wish-list-wrapper">
                 <h2 ng-if="enteredText">Search Results for "{{enteredText}}"</h2>
@@ -52,23 +49,22 @@
                 <hr class="rounded line-separator">
             </div>
 
-                <table>
-                    <tbody>
+            <table>
+                <tbody>
                     <tr ng-repeat='array in normalizedArray'>
                         <td ng-repeat='item in array' class="movies-wrapper">
                             <div data-title="{{ getTooltipMovieMessage(item) }}" class="movie-wrapper">
                                 <div ng-if="item.isWishListMovie === true" class="heart-wrapper">
                                     &#10084;&#65039;
                                 </div>
-                                <img ng-src="{{item.Poster}}"  width="250" height="350" ng-click="getMovieDetails(item)"/>
+                                <img ng-src="{{item.Poster}}"  width="250" height="350"
+                                     ng-click="getMovieDetails(item)"/>
                             </div>
-
                         <td>
                     </tr>
-                    </tbody>
-                </table>
+                </tbody>
+            </table>
+
         </div>
-
     </body>
-
 </html>
